@@ -1,5 +1,12 @@
 2008-10-26  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	Implement serialization for Locations.
+	* lib/Automake/Location.pm (serialize, deserialize): New
+	functions.  They allows to serialize a Location in an array, and
+	to restore a Location from a thread queue.  The API is
+	unsymmetric (array vs. queue) because enqueuing data needs to
+	happen atomically.
+
 	Parallel automake: ordered output messages.
 	* lib/Automake/Channels.pm (%_default_options): New options
 	`ordered' default enabled, `queue', default zero (no queue),
